--- a/Xogunners/Xogunners.csproj
+++ b/Xogunners/Xogunners.csproj
@@ -131,6 +131,16 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Imagens\avaliacao.png" />
+    <Content Include="Content\Imagens\clock.png" />
+    <Content Include="Content\Imagens\facebook.png" />
+    <Content Include="Content\Imagens\img-home.png" />
+    <Content Include="Content\Imagens\img-programa.png" />
+    <Content Include="Content\Imagens\instagram.png" />
+    <Content Include="Content\Imagens\mud.png" />
+    <Content Include="Content\Imagens\place.png" />
+    <Content Include="Content\Imagens\teste-brand.png" />
+    <Content Include="Content\Imagens\youtube.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -160,8 +170,8 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\Login.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
