Criação da página login e inicio da recuperação de senha

--- a/Xogunners/Xogunners.csproj
+++ b/Xogunners/Xogunners.csproj
@@ -172,6 +172,7 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Login.cshtml" />
+    <Content Include="Views\Home\RecuperarSenha.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
