--- a/Xogunners/Xogunners.csproj
+++ b/Xogunners/Xogunners.csproj
@@ -173,10 +173,12 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Login.cshtml" />
     <Content Include="Views\Home\RecuperarSenha.cshtml" />
+    <Content Include="Views\Shared\_LayoutAdministrador.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
+    <Folder Include="Views\Administrador\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
